# command-line-assistant

./: .gitignore  BUILD.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
command_line_assistant/: __init__.py  cli.py  client.py  config.py  context_collector.py  daemon.py  exceptions.py  executor.py  logger.py  platform_detector.py  prompt_builder.py  query_evaluator.py  sanitizer.py  schemas.py
docker/: Dockerfile.arch  Dockerfile.build-arch  Dockerfile.build-deb  Dockerfile.debian  Dockerfile.fedora  Dockerfile.gentoo  Dockerfile.rhel  Dockerfile.suse  Dockerfile.ubuntu  docker-compose.yml  test-package.sh
packaging/: PKGBUILD  command-line-assistant.service  command-line-assistant.spec  config.toml
packaging/debian/: changelog  config  control  install  rules  service
tests/: __init__.py  test_cli.py  test_client.py  test_config.py  test_integration.py  test_output_analysis.py  test_platform_detector.py
